--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="col-4">
             <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">
-              <i class="bi bi-hospital"></i>
+              <i class="bi bi-shift-fill"></i>
             </span>
             <input type="text" class="form-control" placeholder="Peso">
             </div>
@@ -150,7 +150,7 @@
               <div class="col-4">
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1">
-                    <i class="bi bi-activity"></i>
+                    <i class="bi bi-sort-numeric-up"></i>
                   </span>
                   <input type="text" class="form-control" placeholder="Estatura">
                 </div>
@@ -158,7 +158,7 @@
               <div class="col-4">
                 <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">
-                  <i class="bi bi-calendar-date"></i>
+                  <i class="bi bi-hospital"></i>
                 </span>
                 <input type="text" class="form-control" placeholder="IPS">
                 </div>
@@ -166,7 +166,7 @@
               <div class="col-4">
                 <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">
-                  <i class="bi bi-hospital"></i>
+                  <i class="bi bi-arrow-through-heart-fill"></i>
                 </span>
                 <input type="text" class="form-control" placeholder="Estado Civil">
                 </div>
