--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
       </div>
     </section>
     <section class="container my-5">
+
+      <!-- Formluario -->
       <div class="row justify-content-center">
         <div class="col-8">
           <h3 class="text-center">Registrate</h3>
@@ -190,7 +192,7 @@
                 </div>
               </div>
             </div>
-        <button class="btn btn-primary mx-auto d-block" type="submit">enviar</button>
+        <button class="btn btn-primary mx-auto d-block" type="submit">Enviar</button>
         </form>
 
       </div>
