se crea controlador para mostrar pacientes y se organizan los controladores

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
                 Dropdown
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="./src/view/paciente.html">Paciente</a></li>
+                <li><a class="dropdown-item" href="./src/view/medico.html">Medico</a></li>
+                <li><a class="dropdown-item" href="./src/view/enfermedad.html">Enfermedad</a></li>
+                <li><a class="dropdown-item" href="./src/view/medicamento.html">Medicamento</a></li>
+                <li><a class="dropdown-item" href="./src/view/signovital.html">Signo Vital</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -194,7 +197,6 @@
             </div>
         <button class="btn btn-primary mx-auto d-block" type="submit">Enviar</button>
         </form>
-
       </div>
     </section>
   </main>
