--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
       <div class="container-fluid">
-        <img src="./assets/img/logotipo.png" alt="logo" width="60" height="60">
+        <img src="./assets/img/logotipo.png" alt="logo" width="45" height="45">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active mx-2" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
