Se terminan la vista de los formularios de todos los modelos

--- a/index.html
+++ b/index.html
@@ -31,19 +31,6 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Dashboard
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardPaciente.html">DB - Paciente</a></li>
-                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardMedico.html">DB - Médico</a></li>
-                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardEnfermedad.html">DB - Enfermedad</a></li>
-                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardMedicamento.html">DB - Medicamento</a></li>
-                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardSignoVital.html">DB - Signo Vital</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
                 Gestión
               </a>
               <ul class="dropdown-menu">
@@ -52,6 +39,19 @@
                 <li><a class="dropdown-item" href="./src/view/enfermedad.html">Enfermedad</a></li>
                 <li><a class="dropdown-item" href="./src/view/medicamento.html">Medicamento</a></li>
                 <li><a class="dropdown-item" href="./src/view/signovital.html">Signo Vital</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dashboard
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardPaciente.html">DB - Paciente</a></li>
+                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardMedico.html">DB - Médico</a></li>
+                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardEnfermedad.html">DB - Enfermedad</a></li>
+                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardMedicamento.html">DB - Medicamento</a></li>
+                <li><a class="dropdown-item" href="./src/view/dashboards/dashboardSignoVital.html">DB - Signo Vital</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -101,7 +101,7 @@
               <h5 style="font-size: 30px;">¡¡¡ATREVETE A FORMAR PARTE DE NUESTRA FAMILIA!!!</h5>
               <p style="font-size: 20px;">Unete para poder mejorar tu bienestar y tu salud.</p>
             </div>
-            <a href="../paciente.html" class="btn btn-primary my-3">REGISTRATE</a>
+            <a href="./src/view/paciente.html" class="btn btn-primary my-3">REGISTRATE</a>
           </div>
         </div>
       </div>
@@ -180,9 +180,9 @@
       </div>
     </section>
     <!-- Sección 3 -->
-    <section class="container my-5">
+    <section class="my-5 seccion3">
       <div class="row">
-        <div class="col-md-4 col-sm-6 col-12 mb-4">
+        <div class="col-md-4 col-sm-6 col-12 mb-4 my-3">
           <div class="card shadow-sm border">
             <div class="card-body text-center">
               <i class="bi bi-people-fill fs-3 text-primary"></i>
@@ -192,7 +192,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 col-12 mb-4">
+        <div class="col-md-4 col-sm-6 col-12 mb-4 my-3">
           <div class="card shadow-sm border">
             <div class="card-body text-center">
               <i class="bi bi-bandaid-fill fs-3 text-primary"></i>
@@ -202,7 +202,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 col-12 mb-4">
+        <div class="col-md-4 col-sm-6 col-12 mb-4 my-3">
           <div class="card shadow-sm border">
             <div class="card-body text-center">
               <i class="bi bi-capsule fs-3 text-primary"></i>
@@ -218,7 +218,7 @@
               <i class="bi bi-bug-fill fs-3 text-primary"></i>
               <h5 class="card-title mt-3">Enfermedades</h5>
               <p class="card-text">Aquí puedes registrar tus enfermedades</p>
-              <a href="./src/view/dashboards/dashboardEnfermedad.html" class="btn btn-primary">IR →</a>
+              <a href="./src/view/enfermedad.html" class="btn btn-primary">IR →</a>
             </div>
           </div>
         </div>
@@ -228,7 +228,7 @@
               <i class="bi bi-heart-pulse-fill fs-3 text-primary"></i>
               <h5 class="card-title mt-3">Signos vitales</h5>
               <p class="card-text">Aquí puedes registrar tus signos vitales</p>
-              <a href="./src/view/dashboards/dashboardSignoVital.html" class="btn btn-primary">IR →</a>
+              <a href="./src/view/signovital.html" class="btn btn-primary">IR →</a>
             </div>
           </div>
         </div>
@@ -380,7 +380,7 @@
     <p class="footer-texto text-center text-white">"Salud anticipada, bienestar asegurado." </p>
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
       <a href="https://x.com/kuprax" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-twitter"></i>
+        <i class="bi bi-twitter-x"></i>
       </a>
       <a href="https://github.com/angeltamayoz" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-github"></i>
