--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </header>
   <main>
     <!-- Carrusel -->
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -75,7 +75,7 @@
           aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active carrusel">
+        <div class="carousel-item active carrusel" data-bs-interval="4000">
           <img src="../../../assets/img/medicoIndex1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-block">
             <div class="text-box">
@@ -85,7 +85,7 @@
             <a href="#seccion2" class="btn btn-primary my-5">Ver mas</a>
           </div>
         </div>
-        <div class="carousel-item carrusel">
+        <div class="carousel-item carrusel" data-bs-interval="4000">
           <img src="../../../assets/img/medicoIndex2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-block">
             <div class="text-box">
@@ -95,7 +95,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item carrusel">
+        <div class="carousel-item carrusel" data-bs-interval="4000">
           <img src="../../../assets/img/medicoIndex3.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-block">
             <div class="text-box">
@@ -135,7 +135,7 @@
       </div>
     </section>
     <!-- Tarjetas sección 2 -->
-    <section class="bg-primary text-white py-5 border m-5 shadow tarjetasSec2" id="seccion2">
+    <section class="bg-primary text-white py-3 border m-5 shadow tarjetasSec2" id="seccion2">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mb-4">
@@ -311,7 +311,7 @@
             <div class="card-header bg-primary text-white text-center py-4">
               <h3 class="mb-0"><i class="bi bi-person-plus-fill me-2"></i>REGÍSTRATE YA</h3>
             </div>
-            <div class="card-body bg-light">
+            <div class="card-body formPaciente">
               <form class="p-4">
                 <div class="row">
                   <div class="mb-3 col-6">
